GPv3: Auto Conversion of GPv2 scenes breaking masks. #120212

Closed
opened 2024-04-03 16:22:45 +02:00 by LT_Arts · 1 comment

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.23

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-02 23:22, hash: 56c78a923626
Worked: 4.1 Release candidate

Short description of error
Upon opening of a scene from blender 4.1 with GP2 assets, it will convert them to GPv3 objects. However this causes the masks to stop working entirely. Attempting to re-enable the masks manually will yield no results.

Exact steps for others to reproduce the error

  • Create a scene in blender 4.1
  • Add a grease pencil object and create a mask
  • Draw outside of the masked area (to simulate going out of the lines by accident)
  • open the scene in 4.2 alpha and convert to GPv3
  • Mask will be non-functional and will show lines outside of the masked area.
  • See attached file for an example.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.23 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-02 23:22, hash: `56c78a923626` Worked: 4.1 Release candidate **Short description of error** Upon opening of a scene from blender 4.1 with GP2 assets, it will convert them to GPv3 objects. However this causes the masks to stop working entirely. Attempting to re-enable the masks manually will yield no results. **Exact steps for others to reproduce the error** - Create a scene in blender 4.1 - Add a grease pencil object and create a mask - Draw outside of the masked area (to simulate going out of the lines by accident) - open the scene in 4.2 alpha and convert to GPv3 - Mask will be non-functional and will show lines outside of the masked area. - See attached file for an example.
LT_Arts added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-04-03 16:22:46 +02:00
Falk David added this to the Grease Pencil project 2024-04-03 16:45:37 +02:00
Member

Can confirm.

Can confirm.
Falk David added
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-04-03 17:31:01 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-03 18:00:56 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120212
No description provided.